--- a/fitness_club/appsettings.json
+++ b/fitness_club/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=FitnessClubAPI;Username=postgres;Password=root"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
