--- a/fitness_club/appsettings.Development.json
+++ b/fitness_club/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Key": "this_is_a_super_secret_development_key_with_32_chars",
+    "Issuer": "fitness_club",
+    "Audience": "fitness_club_client"
   }
 }
